<resources>
    <string name="app_name">MRNS</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">login</string>
    <string name="title_activity_map">map</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="MGUARD_ADDR">"https://mdm.lx.or.kr"</string>
    <string name="MGUARD_APK">MGuard lx 4.2.7.apk</string>
    <string name="MGUARD_PACKAGE">co.kr.lumensoft.mguard.lx</string>
    <string name="KT_MDM_PACKAGE">com.kt.dm.saas.mdm</string>
    <string name="sslvpn_addr">https://103.7.191.182</string>
    <string name="sslid">A90005</string>
    <string name="sslpw">lxlx!1234</string>
    <string name="SECUWAYSSL_APK">SecuwaySSLService.apk</string>
    <string name="SECUWAYSSL_PACKAGE">net.secuwiz.SecuwaySSL.mobileservice</string>
    <string name="MDM_URL">https://emm.lx.or.kr</string>
    <string name="MDM_PACKAGE">com.raonsecure.touchen_mguard_4_0.lx</string>
    <string name="MDM_VERSIONCODE">23</string>
    <string name="server_ip">http://172.17.4.21:8080</string>
    <string name="set_del_time">240</string>
    <string name="path_sqlite">/MRNS/sqldata/</string>
    <string name="path_mapdata">/MRNS/mapdata/</string>
    <string name="path_img">/MRNS/img/</string>
    <string name="db_base">MRNS.db</string>
    <string name="db_name">MRNS.db</string>
    <string name="db_path">/data/data/com.mrns.main/databases</string>
    <string name="db_full_name">/data/data/com.mrns.main/databases/MRNS.db</string>
    <string name="db_user_full_name">/data/data/com.mrns.main/databases/MRNS_USER.db</string>
    <string name="message_error_timeout">서버 응답시간이 초과했습니다.\n관리자에게 문의바랍니다.</string>
    <string name="req_maindata">/MRNS/board/lastBbs.json</string>
    <string name="req_net_offline">네트워크 연결이 끊겼습니다!\n오프라인 모드로 변경합니다.</string>
    <string name="req_net_online">네트워크가 연결 되었습니다.!\n온라인 모드로 변경합니다.</string>
    <string name="req_mobile_notice">/MRNS/board/mobileNotice.json</string>
    <string name="req_ollehmap">/MRNS/olMap.html</string>
    <string name="req_capture">/MRNS/captureMap.html</string>
    <string name="req_rog_map">/MRNS/data/sttusImage/rogMap.json</string>
    <string name="req_k_img">/MRNS/data/sttusImage/kImg.json</string>
    <string name="req_o_img">/MRNS/data/sttusImage/oImg.json</string>
    <string name="req_p_img">/MRNS/data/sttusImage/msurpointsLcDrw.json</string>
    <string name="req_drw_img">/MRNS/data/instlImage/drw.json</string>
    <string name="req_map_img">/MRNS/data/instlImage/map.json</string>
    <string name="req_rog_map_ncp">/MRNS/data/sttusImageNcp/rogMap.json</string>
    <string name="req_k_img_ncp">/MRNS/data/sttusImageNcp/kImg.json</string>
    <string name="req_o_img_ncp">/MRNS/data/sttusImageNcp/oImg.json</string>
    <string name="req_p_img_ncp">/MRNS/data/sttusImageNcp/msurpointsLcDrw.json</string>
    <string name="req_sido">/MRNS/map/listCtprvn.json</string>
    <string name="req_sigungu">/MRNS/map/listSig.json</string>
    <string name="req_dong">/MRNS/map/listEmd.json</string>
    <string name="req_ri">/MRNS/map/listLi.json</string>
    <string name="req_doro">/MRNS/map/listRoad.json</string>
    <string name="req_dorolist">/MRNS/map/listDetailRoad.json</string>
    <string name="req_jibunlist">/MRNS/map/listDetailParcel.json</string>
    <string name="req_buildlist">/MRNS/map/listDetailBuld.json</string>
    <string name="req_pointlist">/MRNS/map/listPoint.json</string>
    <string name="req_pointInfo">/MRNS/map/viewPoint.json</string>
    <string name="req_pointInfo_gis">/MRNS/map/viewBasePoint.json</string>
    <string name="req_insert_data_gis">/MRNS/data/selectStdrspotUnity.json</string>
    <string name="req_insert_data_file">/MRNS/data/unityFileDownload.json</string>
    <string name="req_pointInfo_ncp_gis">/MRNS/map/viewNcpPoint.json</string>
    <string name="req_insert_data_ncp_gis">/MRNS/data/selectStdrspotNcpUnity.json</string>
    <string name="req_insert_data_ncp_rstl_gis">/MRNS/data/selectStdrspotNcpRstl.json</string>
    <string name="req_insert_data_ncp_traver_gis">/MRNS/data/selectStdrspotNcpTraver.json</string>
    <string name="req_insert_data_ncp_traver_sub">/MRNS/data/selectStdrspotNcpSub.json</string>
    <string name="req_insert_data_ncp_sttus_inq">/MRNS/data/selectStdrspotSttusInq.json</string>
    <string name="url_insert_nc_data_download">/MRNS/data/ncFileDownload.json</string>
    <string name="req_sqlite">/MRNS/user/templateDownload.json</string>
    <string name="req_login">/MRNS/user/loginCheck.json</string>
    <string name="req_test">/MRNS/map/test.json</string>
    <string name="req_boardlist">/MRNS/board/listNotice.json</string>
    <string name="req_boarddetail">/MRNS/board/viewNotice.json</string>
    <string name="req_qnalist">/MRNS/board/listQnA.json</string>
    <string name="req_qnadetail">/MRNS/board/viewQnA.json</string>
    <string name="req_jisalist">/MRNS/data/listDept.json</string>
    <string name="req_downlist">/MRNS/data/listMapData.json</string>
    <string name="req_downfile">/MRNS/data/mapFileDownload.json</string>
    <string name="req_investlist">/MRNS/data/listInqBfStdrspot.json</string>
    <string name="req_downPoint">/MRNS/data/earlyFileDownload.json</string>
    <string name="req_downNcplist">/MRNS/data/listInqBfNcpPi.json</string>
    <string name="req_downNcpPoint">/MRNS/data/ncpFileDownload.json</string>
    <string name="req_finishlist_ncp">/MRNS/data/uploadInqBeforeNcpList.json</string>
    <string name="req_finishdetail_ncp">/MRNS/data/uploadInqBeforeNcpView.json</string>
    <string name="req_finishlist">/MRNS/data/uploadInqBeforeList.json</string>
    <string name="req_finishdetail">/MRNS/data/uploadInqBeforeView.json</string>
    <string name="req_uploadoimg">/MRNS/data/uploadImage/oImg.json</string>
    <string name="req_uploadkimg">/MRNS/data/uploadImage/kImg.json</string>
    <string name="req_uploadrimg">/MRNS/data/uploadImage/rogMap.json</string>
    <string name="req_uploadpimg">/MRNS/data/uploadImage/msurpointsLcDrw.json</string>
    <string name="req_upload_date">조사\n년월일</string>
    <string name="req_upload_affiliation">소속</string>
    <string name="req_upload_position">직급</string>
    <string name="req_upload_positions">직위</string>
    <string name="req_upload_name">성명</string>
    <string name="req_upload_number">사번</string>
    <string name="req_upload_cancel_complete">조사완료취소</string>
    <string name="req_upload_view_position">위치보기</string>
    <string name="req_upload_transmit">전송</string>
    <string name="key_exclude_notice">excludeNotice</string>
    <string name="key_shared_preferences">pref</string>
    <string name="key_stdr_spot_sn">stdrspotSn</string>
    <string name="key_stdr_spot_sn_json">stdrspot_sn</string>
    <string name="key_base_point_no">basePointNo</string>
    <string name="key_base_point_no_json">base_point_no</string>
    <string name="key_bonline">bOnline</string>
    <string name="key_status">STATUS</string>
    <string name="key_check_id">check1</string>
    <string name="key_save_id">saveUserId</string>
    <string name="key_is_geo">isGeo</string>
    <string name="key_mode">mode</string>
    <string name="key_title">title</string>
    <string name="key_date">date</string>
    <string name="key_point_name">pointNm</string>
    <string name="key_file_name">fileName</string>
    <string name="key_adm_code">admCd</string>
    <string name="key_point_class_code">pointClassCode</string>
    <string name="key_point_kind_code">pointsKndCd</string>
    <string name="key_start_date">startDate</string>
    <string name="key_end_date">endDate</string>
    <string name="key_start_point_name">startPointName</string>
    <string name="key_end_point_name">endPointName</string>
    <string name="key_inquire_descent_sorting">inqDeSorting</string>
    <string name="key_inquire_status">inqSttus</string>
    <string name="key_index_insert">indexInsert</string>
    <string name="key_type">type</string>
    <string name="key_fid">fId</string>
    <string name="key_android">Android</string>
    <string name="key_insert_bcomplete">InsertBComplete_%1$d_%2$d</string>
    <string name="key_width">width</string>
    <string name="key_height">height</string>
    <string name="key_emd_name">emdName</string>
    <string name="key_start_point_no">startPointNo</string>
    <string name="key_end_point_no">endPointNo</string>
    <string name="key_point_secd">pointSecd</string>
    <string name="key_mtr_status_code">mtrStatusCode</string>
    <string name="key_install_date">installDate</string>
    <string name="key_inq_date">inqDate</string>
    <string name="key_npu_sn">npuSn</string>
    <string name="key_npu_sn_json">npu_sn</string>
    <string name="key_find_route">findRoute</string>
    <string name="exception">Exception</string>
    <string name="iOException">IOException</string>
    <string name="indexOutOfBoundsException">IndexOutOfBoundsException</string>
    <string name="jSONException">JSONException</string>
    <string name="nullPointerException">NullPointerException</string>
    <string name="fileNotFoundException">FileNotFoundException</string>
    <string name="remoteException">RemoteException</string>
    <string name="mguardAuthException">MguardAuthException</string>
    <string name="nameNotFoundException">NameNotFoundException</string>
    <string name="cursorIndexOutOfBoundsException">CursorIndexOutOfBoundsException</string>
    <string name="volleyError">VolleyError</string>
    <string name="done">done</string>
    <string name="downMapErrorMsg">지도 데이터를 선택해주세요.</string>
    <string name="downPointListErrorMsg">현황조사 자료를 선택해주세요.</string>
    <string name="downConfirm">현황조사 자료를 새로 받습니다. \n 받으시겠습니까?</string>
    <string name="downCkData">현황조사완료 자료가 있습니다. \n현황자료올리기 페이지로 이동합니다.</string>
    <string name="information_uploading">현황조사 자료를 업로드 중입니다.</string>
    <string name="question_change_status">현황조사상태를 변경하시겠습니까?</string>
    <string name="req_uploadInvest">/MRNS/data/updateSttusInqBefore.json</string>
    <string name="goToChageStatus">현황조사 상태를 변경하였습니다.\n현황자료 올리기 리스트 페이지로 이동합니다.</string>
    <string name="uploadComplete">현황조사 업로드를 완료했습니다.</string>
    <string name="uploadError">현황자료 리스트가 없습니다. 현황자료 저장을 완료해 주세요.</string>
    <string name="pointInfo">결과값이 없습니다.</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="inquire_status_ongoing">조사중</string>
    <string name="inquire_status_complete">조사완료</string>
    <string name="req_updateMapInqYear">/MRNS/data/updateMapInqYear.json</string>
    <string name="req_uploadInvestNcp">/MRNS/data/updateSttusInqNcpBf.json</string>
    <string name="prompt_sslvpnid">아이디</string>
    <string name="prompt_sslvpnpw">비밀번호</string>
    <string name="action_sslvpn_in">SSL_VPN 로그인</string>
    <string name="opt_package_name">"com.raonsecure.motplx"</string>
    <string name="prompt_userid">아이디</string>
    <string name="prompt_password">OTP 인증번호</string>
    <string name="action_sign_in_short">로그인</string>
    <string name="onText">온라인</string>
    <string name="offText">오프라인</string>
    <string name="invest_history_list">현황이력 리스트</string>
    <string name="empty">""</string>
    <string name="insert_complete">완료</string>
    <string name="insert_images_choose_album">앨범선택</string>
    <string name="insert_images_camera">카메라</string>
    <string name="insert_images_memo">메모하기</string>
    <string name="insert_images_make_roughmap">약도생성</string>
    <string name="invest_insert_title">현황조사입력</string>
    <string name="history_list_column_seq">순번</string>
    <string name="history_list_column_inq_date">조사일자</string>
    <string name="history_list_column_inq_actor">조사자</string>
    <string name="history_list_column_inq_institution">조사기관</string>
    <string name="notice_regist_date">등록일시 : </string>
    <string name="notice_regist_user_name">작 성 자 : </string>
    <string name="notice_close_forever">다시보지않기</string>
</resources>