<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_card_header"
        android:background="@drawable/nav_bg_green"
        android:elevation="2dp">

        <RelativeLayout
            android:id="@+id/layout_back_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/imagebtn_back_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_alignParentLeft="true"
                android:background="@drawable/nav_btn_back_n"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/imagebtn_back_home"
                android:gravity="center_vertical"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textview_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invest_history_list"
                    android:textColor="@color/textWhite"
                    android:textSize="@dimen/invert_text_title_s_size"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/textview_sub_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:textColor="@color/textWhite"
                    android:textSize="@dimen/invert_text_title_ss_size"
                    android:textStyle="bold"/>
            </LinearLayout>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_weight="0"
        cardView:cardCornerRadius="@dimen/table_card_corner_radius"
        cardView:cardElevation="@dimen/table_card_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_card_header"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/invest_body_border">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/history_list_column_seq"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/invert_text_header_s_size"/>
            <LinearLayout
                android:id="@+id/layout_sort_by_inq_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/history_list_column_inq_date"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/invert_text_header_s_size"/>
                <ImageButton
                    android:id="@+id/imagebtn_sort_by_inq_date"
                    android:layout_width="15dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center_vertical"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:src="@drawable/btn_list_sorting"/>
            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/history_list_column_inq_actor"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/invert_text_header_size"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/history_list_column_inq_institution"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/invert_text_header_s_size"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"/>

</LinearLayout>
