<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="350sp"
        android:layout_height="500sp"
        android:layout_gravity="center|center_vertical"
        android:layout_weight="0.73"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingTop="5dp"
        android:weightSum="1">

        <ImageButton
            android:id="@+id/imagebtn_close"
            android:layout_width="44sp"
            android:layout_height="44sp"
            android:layout_gravity="end"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="390dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/empty"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3sp"
                        android:gravity="right"
                        android:text="@string/notice_regist_date" />

                    <TextView
                        android:id="@+id/textview_regist_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/empty" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3sp"
                        android:gravity="right"
                        android:text="@string/notice_regist_user_name" />

                    <TextView
                        android:id="@+id/textview_regist_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/empty" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textview_contents"
                    android:layout_width="match_parent"
                    android:layout_height="279dp"
                    android:layout_marginTop="15sp"
                    android:background="@drawable/edittext_n"
                    android:text="@string/empty" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textview_close_forever"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.24"
                android:text="@string/notice_close_forever" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>